--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(/project/portfolio/photo/code.png);
+    background-image: url(photo/code.png);
     background-size:contain;
     background-repeat: no-repeat;
     background-position:center;
