--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background:white;
+    background: linear-gradient(40deg,rgb(43, 43, 123),pink);
     color: #fff;
 }
 #header{
