--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(photo/code.png);
+  <img align="right" alt="coding gif" width="500"  src="https://user-images.githubusercontent.com/55389276/140866485-8fb1c876-9a8f-4d6a-98dc-08c4981eaf70.gif ">
     background-size:contain;
     background-repeat: no-repeat;
     background-position:center;
